{
    "name": "MLHadesActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "8e9573fb-8a11-4eb8-b294-aceabecd3614",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ee6ff2fe-0232-4d87-a810-2b45eaf684e2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Value",
                    "id": "fd8fddc4-d161-4d64-8da9-24b68bf33eab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Value",
                    "id": "9b9ec7bf-d34a-48ca-bb9e-b7006e0a9cdb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Value",
                    "id": "fb9b70df-1c98-4e1c-abca-f83772a74b62",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackDirectionX",
                    "type": "Value",
                    "id": "426ee7e4-3658-4b0f-9ec8-d3e83f6f55b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackDirectionY",
                    "type": "Value",
                    "id": "7c69732e-20c6-4a76-b415-ee768fe9247c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "1d8c4c82-4487-4f14-8dd3-54d86be60cdc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "37407356-e209-4918-9e0c-52f870c1bff6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9a75fa2d-00f7-422e-ae7d-be6024d29c37",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "398291ee-d0f1-4fa3-ae5b-61ef043b19f7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c498b69d-19ed-4b3f-986e-5e052e70c903",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "23ffcb59-67bf-45ce-9175-dbc5d202cda0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0326df78-0789-49d4-b694-0b976a52b994",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3701f5db-dc62-44e0-9298-fb618ef38c5c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "X Axis",
                    "id": "81e77b48-791f-4f28-af1a-d36259ab1c2d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackDirectionX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "62e7546f-5c7f-4e63-b171-85ff919d53ff",
                    "path": "<Mouse>/position/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackDirectionX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Y Axis",
                    "id": "06460771-a2b3-4b12-b0d4-a42dbd6a00de",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackDirectionY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "c3fba565-9cee-4952-bea4-ed7e455b3670",
                    "path": "<Mouse>/position/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackDirectionY",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}